# flic

./: .doxygen  .gdbinit  .gitignore  .stignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  Makefile  README.md  apt.Debian  gdbinit  memory.x  openocd.cfg
.cargo/: config.toml
.github/workflows/: hello.yml
arch/: CortexL4.mk  CortexM.mk  CortexM4.cmake  CortexM4.mk  x86_64.mk  xtensa.mk
cmake/: arm-none-eabi-gcc.cmake  i686-w64-mingw32-win32.cmake  version.cmake  x86_64-linux-gnu.cmake
cpu/: LX6.mk  STM32F030F4P6.mk  STM32F405RG.mk  STM32F407VGT.cmake  STM32F407VGT6.mk  STM32F429ZIT.cmake  STM32F746NGH6.mk  STM32L496AGI.cmake  STM32L496AGI6.mk  i5.mk
cubemx/STM32F407G-DISC1/: .mxproject  STM32F407G-DISC1.ioc
cubemx/STM32F407G-DISC1/Core/Src/: main.c
cubemx/STM32F407G-DISC1/cmake/stm32cubemx/: CMakeLists.txt
cubemx/STM32F4DISCOVERY/: STM32F4DISCOVERY.ioc
cubemx/STM32L496G-DISCO/: STM32L496G-DISCO.ioc
doc/: STM32.md  STM32F407G-DISC1.md  STM32F4DISCOVERY.md  STM32F746G-DISCO.md  STM32L496G-DISCO.md  STM32L496GDISCOVERY.md  pillF030.md  pillF103.md
dsp/: Cargo.toml  dline.rs  main.rs
etc/udev/: saleae.rc
hw/: .gitignore  ESP32.mk  F0xx_0x0444.mk  F429ZIT.mk  F4DISCO.gdbinit  F4DISCO.mk  F4DISCO.openocd  F4xx_0x0413.mk  F7xx_0x0449.mk  IskraJS.mk  L496x_0x0461.mk  STM32F407G-DISC1.info  STM32F407G-DISC1.ioc  STM32F407G-DISC1.mk  STM32F4DISCOVERY.ioc  STM32F4DISCOVERY.mk  STM32F746G-DISCO.info  STM32F746G-DISCO.mk  STM32L496G-DISCO.info  STM32L496G-DISCO.mk  STM32L496GDISCOVERY.mk  _.mk  duino.gdbinit  duino.mk  netduinoplus2.mk  pc.mk  pillF030.info  pillF030.mk
hw/F4DISCO/: CMakeLists.txt  F4DISCO.ioc  F4DISCO.openocd  Makefile  STM32F407VGTx_FLASH.ld  STM32F407VGTx_FLASH.ld.fix  STM32F407VGTx_FLASH.ld.patch
hw/F4DISCO/Core/Inc/: main.h
hw/F4DISCO/Core/Src/: main.c
hw/F4DISCO/cmake/stm32cubemx/: CMakeLists.txt
hw/F4DISCOVERY/: F4DISCOVERY.ioc
hw/STM32F407G-DISC1/: .gitignore  0000-STM32F407VGTx_FLASH.ld.patch  0000-startup_stm32f407xx.s.patch  0001-STM32F407VGTx_FLASH.ld.patch  0002-STM32F407VGTx_FLASH.ld.patch  0003-STM32F407VGTx_FLASH.ld.patch  0004-STM32F407VGTx_FLASH.ld.patch  0005-STM32F407VGTx_FLASH.ld.patch  0006-STM32F407VGTx_FLASH.ld.patch  0007-STM32F407VGTx_FLASH.ld.patch  0008-STM32F407VGTx_FLASH.ld.patch  Makefile  STM32F407G-DISC1.ioc  STM32F407VGTx_FLASH.ld  STM32F407VGTx_FLASH.ld.fix  STM32F407VGTx_FLASH.ld.orig  startup_stm32f407xx.s
hw/STM32F407G-DISC1/Core/Inc/: main.h  rtc.h
hw/STM32F407G-DISC1/Core/Src/: gpio.c  main.c  rtc.c  stm32f4xx_it.c
hw/STM32F407G-DISC1/cmake/stm32cubemx/: CMakeLists.txt
hw/STM32L496G-DISCO/: 0000-STM32L496AGIx_FLASH.patch  CMakeLists.txt  Makefile  STM32L496AGIx_FLASH.ld  STM32L496AGIx_FLASH.ld.fix  STM32L496G-DISCO.ioc
hw/STM32L496G-DISCO/Core/Inc/: main.h
hw/STM32L496G-DISCO/Core/Src/: main.c
hw/STM32L496G-DISCO/cmake/: gcc-arm-none-eabi.cmake
hw/STM32L496G-DISCO/cmake/stm32cubemx/: CMakeLists.txt
hw/duino/: CMakeLists.txt  Makefile  STM32F405RGTx_FLASH.ld  STM32F405RGTx_FLASH.ld.patch  duino.ioc
hw/duino/Core/Inc/: main.h  stm32_assert.h
hw/duino/Core/Src/: main.c
hw/duino/cmake/stm32cubemx/: CMakeLists.txt
hw/netduinoplus2/: CMakeLists.txt  Makefile  STM32F405RGTx_FLASH.ld  STM32F405RGTx_FLASH.ld.patch  netduinoplus2.ioc
hw/netduinoplus2/Core/Inc/: main.h
hw/netduinoplus2/Core/Src/: main.c
hw/netduinoplus2/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_ll_rcc.h
inc/: DAP.hpp  compiler.h  config.h  flic.h  main.h  microrl.h  vm.h
lib/: FORTH.ini  stm32.ini
mk/: all.mk  cfg.mk  clean.mk  cmake.mk  cross.mk  debug.mk  dirs.mk  doc.mk  format.mk  install.mk  merge.mk  package.mk  qemu.mk  ref.mk  rule.mk  rust.mk  src.mk  tool.mk  var.mk  version.mk
os/: Linux.mk  _.mk
ref/iskrajs/boards/: ISKRAJS.py
ref/iskrajs/src/: jsinteractive.c
res/: flic.rc
src/: DAP.cpp  DAP.lex  DAP.yacc  FORTH.rl  FORTH.rs  flic.c  flic.rs  main.c  repl.lex  repl.yacc  vm.c
vm/: compiler.c  compiler.h  flic.c  flic.h  microrl.c  parser.h  vm.h
vscode/: extension.js  flic.tmLanguage.json  package.json
