[package]
name         = "flic"
description  = "FORTH Language Inspired (byte)Code"
version      = "0.0.1"
authors      = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
repository   = "https://github.com/ponyatov/flic"
license      = "MIT"
keywords     = ["FORTH", "CLI", "REPL", "MCU", "STM32", "Cortex-M"]
categories   = ["Command-line interface", "Compilers", "Embedded development",
                "No standard library", "Operating systems"]
readme       = "README.md"
rust-version = "1.80"
edition      = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"

[dev-dependencies]

[target.'cfg( unix )'.dependencies]

[target.'cfg(target_arch= "thumbv7em-none-eabihf" )'.dependencies]

[[bin]]
name="flic"
path="src/flic.rs"
